<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/logo_de_mi_gymsito"
        android:src="@drawable/logo_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/selecciona_idioma"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSpanish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/spanish"
        android:textColor="@color/negro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/blanco"
        app:cornerRadius="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnglish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/english"
        android:textColor="@color/negro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/blanco"
        app:cornerRadius="30dp" />

</LinearLayout>
